interfaceAffiché
l'interface s'affiche